Fix margin below figure on smaller breakpoints

--- a/app/components/article/_article.scss
+++ b/app/components/article/_article.scss
@@ -38,7 +38,8 @@
 
   figure {
     @include govuk-responsive-margin(6, "bottom");
-    margin: 0;
+    margin-left: 0;
+    margin-right: 0;
     width: 100%;
 
     // Show outline around linked images within figures
